--- a/userCenter/src/main/resources/application-prd.yml
+++ b/userCenter/src/main/resources/application-prd.yml
@@ -6,11 +6,11 @@ token:
 spring:
     datasource:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:oracle:thin:@47.92.67.90:1521:ORCL
+      url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
 #      url: jdbc:oracle:thin:@192.168.1.111:1521:LIUZE
       username: sdtd27
       password: sdtd27
-      driver-class-name: oracle.jdbc.OracleDriver
+      driver-class-name: com.mysql.jdbc.Driver
       minIdle: 10
       maxActive: 200
       initialSize: 5
@@ -26,6 +26,7 @@ spring:
       filters: stat,wall,log4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
     jpa:
+      database: ORACLE
       hibernate:
         ddl-auto: none
       show-sql: true
@@ -45,6 +46,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:7002/eureka/
+      defaultZone: http://168.130.1.31:31814/eureka/
 logging:
   config: classpath:logback-spring.xml
