--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -4,11 +4,12 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
+    url: jdbc:oracle:thin:@168.130.1.32:1521:orcl
+   # url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
     username: sdtd27
     password: sdtd27
-    driver-class-name: com.mysql.jdbc.Driver
-#    driver-class-name: oracle.jdbc.driver.OracleDriver
+ #   driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: oracle.jdbc.driver.OracleDriver
     initialSize: 5
     minIdle: 5
     maxActive : 10
@@ -25,7 +26,9 @@ spring:
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   jpa:
      show-sql: true
-     database: ORACLE
+#     database: ORACLE
+ #    hibernate:
+  #     ddl-aut
   application:
     name: nurseTask
 eureka:
