--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://168.130.1.30:31814/eureka
+      defaultZone: http://168.130.1.31:7002/eureka/
 #spring:
 #  profiles:
 #    active: prd
