--- a/census-server/src/main/resources/application-dev.yml
+++ b/census-server/src/main/resources/application-dev.yml
@@ -1,23 +1,55 @@
 server:
-  port: 7987
+    port: 7987
+    context-path: /censusServer
+token:
+  expiretime: 300000000
 spring:
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:oracle:thin:@47.92.67.90:1521:ORCL
-    username: sdtd27
-    password: sdtd27
-    driver-class-name: oracle.jdbc.driver.OracleDriver
-    initialSize: 5
-    minIdle: 5
-    maxActive : 10
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 30000
-    minEvictableIdleTimeMillis: 60000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxPoolPreparedStatementPerConnectionSize: 20
-    filters: stat,wall,log4j
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    datasource:
+      type: com.alibaba.druid.pool.DruidDataSource
+      url: jdbc:oracle:thin:@168.130.1.32:1521:ORCL
+#      url: jdbc:oracle:thin:@168.130.1.32:1521:LIUZE
+      username: sdtd27
+      password: sdtd27
+      driver-class-name: oracle.jdbc.driver.OracleDriver
+      minIdle: 10
+      maxActive: 50
+      initialSize: 5
+      maxWait: 60000
+      timeBetweenEvictionRunsMillis: 3000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      filters: stat,wall,log4j
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
+    jpa:
+      hibernate:
+        ddl-auto: none
+      show-sql: true
+    application:
+      name: censusServer
+    redis:
+        database: 0
+        host: 168.130.1.31
+        port: 31662
+#        host: localhost
+#        port: 65535
+#        password: 123456
+        password:
+        pool:
+          max-active: 8
+          max-wait: -1
+          max-idle: 8
+          min-idle: 0
+        timeout: 0
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+        service-url:
+          defaultZone: http://localhost:7002/eureka/
+logging:
+  config: classpath:logback-spring.xml
