--- a/xstask-server/src/main/resources/application-prd.yml
+++ b/xstask-server/src/main/resources/application-prd.yml
@@ -27,7 +27,7 @@ spring:
       filters: stat,wall,log4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
     redis:
-          database: 0
+          database: 1
           host: 168.130.1.31
           port: 31662
           password:
@@ -57,8 +57,10 @@ eureka:
     healthcheck:
       enabled: true
   instance:
-          lease-expiration-duration-in-seconds: 30
-          lease-renewal-interval-in-seconds: 10
+          #服务续约 续约服务的调用间隔时间 服务失效的时间
+           #Eureka Server在启动的时候会创建一个定时任务 默认每隔60秒将当前清单中超时90秒没有续约的服务提出出去
+          lease-renewal-interval-in-seconds: 30
+          lease-expiration-duration-in-seconds: 90
 
 
 #解决时差的问题
