--- a/monitor-server/src/main/resources/application-dev.yml
+++ b/monitor-server/src/main/resources/application-dev.yml
@@ -51,5 +51,9 @@ eureka:
   client:
         service-url:
           defaultZone: http://168.130.1.31:31814/eureka/
+          #防止心跳启动报错
+        register-with-eureka: false
+        fetch-registry: false
+
 logging:
   config: classpath:logback-spring.xml
