--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 		<module>file-server</module>
 		<module>exam-server</module>
 		<module>linedata-server</module>
-	</modules>
+        <module>monitor-server</module>
+    </modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
