--- a/nursetask-server/src/main/resources/application.yml
+++ b/nursetask-server/src/main/resources/application.yml
@@ -49,8 +49,8 @@ eureka:
   client:
     service-url:
      # defaultZone: http://168.130.1.31:7002/eureka/
-     #  defaultZone: http://192.168.22.38:7002/eureka/
-       defaultZone: http://localhost:7002/eureka/
+       defaultZone: http://192.168.22.65:7002/eureka/
+#       defaultZone: http://localhost:7002/eureka/
 
   instance:
     prefer-ip-address: true
