--- a/linedata-server/src/main/resources/application.yml
+++ b/linedata-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
   port: 9090
   context-path: /linedata/
 #expireTime: 30000000
-#log
+#
 #logging:
 #  config: classpath:logback.xml
 
@@ -24,7 +24,7 @@ spring:
 #      url: jdbc:oracle:thin:@localhost:1521/orcl
 #      username: sdtd
 #      password: sdtd
-      url: jdbc:oracle:thin:@47.94.131.120:1521/orcl
+      url: jdbc:oracle:thin:@168.130.1.32:1521:orcl
       username: sdtd27
       password: sdtd27
 # 下面为连接池的补充设置，应用到上面所有数据源中
@@ -74,3 +74,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:7002/eureka/
+#      defaultZone: http://dubby:dubby@192.168.22.56:7002/eureka/
