--- a/linedata-server/src/main/resources/application.yml
+++ b/linedata-server/src/main/resources/application.yml
@@ -20,11 +20,9 @@ spring:
 #      driverClassName: com.mysql.jdbc.Driver
 #      type: com.alibaba.druid.pool.DruidDataSource
       #oracle数据库配置
-#      driverClassName: oracle.jdbc.driver.OracleDriver
-#      url: jdbc:oracle:thin:@localhost:1521/orcl
-#      username: sdtd
-#      password: sdtd
-      url: jdbc:oracle:thin:@168.130.1.32:1521:orcl
+      driverClassName: oracle.jdbc.driver.OracleDriver
+      url: jdbc:oracle:thin:@47.94.131.120:1521/orcl
+#      url: jdbc:oracle:thin:@168.130.1.32:1521:orcl
       username: sdtd27
       password: sdtd27
 # 下面为连接池的补充设置，应用到上面所有数据源中
