--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
 			<version>3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>1.5.8.RELEASE</version>
+		</dependency>
+
 		<!-- 加入poi3.9处理word rzt_base中已集成-->
 
 		<!-- 支持 @ConfigurationProperties 注解 -->
