--- a/xstask-server/src/main/resources/application-dev.yml
+++ b/xstask-server/src/main/resources/application-dev.yml
@@ -1,64 +1,67 @@
 server:
-    port: 12346
+    port: 1234
     context-path: /xsTask
 
+
+spring:
+    application:
+          name: xsTask
+    datasource:
+      type: com.alibaba.druid.pool.DruidDataSource
+      url: jdbc:oracle:thin:@47.94.131.120:1521:sdt
+      username: sdtd
+      password: sdtd
+      driver-class-name: oracle.jdbc.driver.OracleDriver
+      minIdle: 10
+      maxActive: 200
+      initialSize: 5
+      maxWait: 60000
+      timeBetweenEvictionRunsMillis: 3000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      filters: stat,wall,log4j
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
+    redis:
+          database: 0
+          host: 39.106.206.129
+          port: 6379
+          password: Rzt82890758-Rzt82890758
+          timeout: 0
+          pool:
+            max-active: 100
+            max-idle: 8
+            min-idle: 0
+            max-wait: -1
+    jpa:
+      database: Oracle
+
+logging:
+  config: classpath:logback-spring.xml
+#url加密  用于swagger模块
+security:
+  basic:
+    path: /xsTask/swagger-ui.html
+    enabled: true
+  user:
+    name: sdtd27
+    password: sdtd27
 eureka:
   client:
     service-url:
-#      defaultZone: http://127.0.0.1:7002/eureka
-#      defaultZone: http://eureka:31814/eureka
-#      defaultZone: http://
-#  insthostance:
-
-#    prefer-ip-address: true
-#    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
-spring:
-  application:
-            name: xsTask
-  logging:
-    config: classpath:logback-spring.xml
-  #url加密  用于swagger模块
-  security:
-    basic:
-      path: /xsTask/swagger-ui.html
+      defaultZone: http://127.0.0.1:7002/eureka/
+    healthcheck:
       enabled: true
-    user:
-      name: sdtd27
-      password: sdtd27
+  instance:
+          #服务续约 续约服务的调用间隔时间 服务失效的时间
+           #Eureka Server在启动的时候会创建一个定时任务 默认每隔60秒将当前清单中超时90秒没有续约的服务提出出去
+          lease-renewal-interval-in-seconds: 10
+          lease-expiration-duration-in-seconds: 15
 
-  datasource:
-        type: com.alibaba.druid.pool.DruidDataSource
-        url: jdbc:mysql://168.130.1.31:30624/sdtd27?useUnicode=true&characterEncoding=utf8
-        username: sdtd27
-        password: sdtd27
-        driver-class-name: com.mysql.jdbc.Driver
-        minIdle: 10
-        maxActive: 200
-        initialSize: 5
-        maxWait: 60000
-        timeBetweenEvictionRunsMillis: 3000
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: SELECT 1 FROM DUAL
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        poolPreparedStatements: true
-        maxPoolPreparedStatementPerConnectionSize: 20
-        filters: stat,wall,log4j
-        connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
-  jpa:
-    database: ORACLE
-  redis:
-    database: 0
-    host: 168.130.1.31
-    password: 'sdtd275d'
-    pool:
-        max-active: 200
-        max-idle: 8
-        max-wait: -1
-        min-idle: 2
-    port: 30809
-    timeout: 0
 
 #解决时差的问题
 #      mysql:
