--- a/xstask-server/src/main/resources/application-prd.yml
+++ b/xstask-server/src/main/resources/application-prd.yml
@@ -53,14 +53,14 @@ security:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:7002/eureka/
+      defaultZone: http://dubby:dubby@127.0.0.1:7002/eureka/
     healthcheck:
       enabled: true
   instance:
           #服务续约 续约服务的调用间隔时间 服务失效的时间
            #Eureka Server在启动的时候会创建一个定时任务 默认每隔60秒将当前清单中超时90秒没有续约的服务提出出去
-          lease-renewal-interval-in-seconds: 30
-          lease-expiration-duration-in-seconds: 90
+          lease-renewal-interval-in-seconds: 10
+          lease-expiration-duration-in-seconds: 15
 
 
 #解决时差的问题
