--- a/xstask-server/src/main/resources/application.yml
+++ b/xstask-server/src/main/resources/application.yml
@@ -1,4 +1,81 @@
+server:
+    port: 12345
+    context-path: /xsTask
+
+
 spring:
-  profiles:
-    active: prd
-#     active: dev
+    application:
+          name: xsTask
+    datasource:
+      type: com.alibaba.druid.pool.DruidDataSource
+      url: jdbc:oracle:thin:@47.94.131.120:1521:orcl
+#      url: jdbc:oracle:thin:@168.130.1.32:1521:orcl
+      username: sdtd27
+      password: sdtd27
+      driver-class-name: oracle.jdbc.driver.OracleDriver
+      minIdle: 10
+      maxActive: 200
+      initialSize: 5
+      maxWait: 60000
+      timeBetweenEvictionRunsMillis: 3000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      filters: stat,wall,log4j
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
+    redis:
+          database: 2
+          host: 168.130.1.31
+          port: 31662
+          password:
+#          host: 39.106.206.129
+#          port: 6379
+#          password: Rzt82890758-Rzt82890758
+          timeout: 0
+          pool:
+            max-active: 100
+            max-idle: 8
+            min-idle: 0
+            max-wait: -1
+    jpa:
+      database: Oracle
+
+logging:
+  config: classpath:logback-spring.xml
+#url加密  用于swagger模块
+#security:
+#  basic:
+#    path: /xsTask/swagger-ui.html
+#    enabled: true
+#  user:
+#    name: sdtd27
+#    password: sdtd27
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:7002/eureka/
+    healthcheck:
+      enabled: true
+  instance:
+          #服务续约 续约服务的调用间隔时间 服务失效的时间
+           #Eureka Server在启动的时候会创建一个定时任务 默认每隔60秒将当前清单中超时90秒没有续约的服务提出出去
+          lease-renewal-interval-in-seconds: 10
+          lease-expiration-duration-in-seconds: 15
+
+
+#解决时差的问题
+#      mysql:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        url: jdbc:mysql://192.168.1.246:3306/repair?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT
+#        username: root
+#        password: 123456
+#        driver-class-name: com.mysql.cj.jdbc.Driver
+#        validationQuery: SELECT 1
+#        testWhileIdle: true
+
+#    aop:
+#      auto: true
