--- a/xstask-server/src/main/resources/application.yml
+++ b/xstask-server/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 server:
     port: 12345
     context-path: /xsTask
-
+    tomcat:
+#      accept-count: 20
+#      max-connections: 5
+#      max-threads: 5
+#      min-spare-threads: 5
+      uri-encoding: utf-8
 
 spring:
     application:
@@ -28,13 +33,13 @@ spring:
       filters: stat,wall,log4j
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMill
     redis:
-          database: 2
-          host: 168.130.1.31
-          port: 31662
-          password:
-#          host: 39.106.206.129
-#          port: 6379
-#          password: Rzt82890758-Rzt82890758
+          database: 0
+#          host: 168.130.1.31
+#          port: 31662
+#          password:
+          host: 39.106.206.129
+          port: 6379
+          password: Rzt82890758-Rzt82890758
           timeout: 0
           pool:
             max-active: 100
@@ -43,6 +48,9 @@ spring:
             max-wait: -1
     jpa:
       database: Oracle
+#    boot:
+#      admin:
+#        url: http://localhost:${server.port}
 
 logging:
   config: classpath:logback-spring.xml
@@ -65,6 +73,9 @@ eureka:
            #Eureka Server在启动的时候会创建一个定时任务 默认每隔60秒将当前清单中超时90秒没有续约的服务提出出去
           lease-renewal-interval-in-seconds: 10
           lease-expiration-duration-in-seconds: 15
+management:
+  security:
+    enabled: false
 
 
 #解决时差的问题
