--- a/warningmonitor/src/main/resources/application-dev.yml
+++ b/warningmonitor/src/main/resources/application-dev.yml
@@ -50,10 +50,10 @@ eureka:
     prefer-ip-address: true
   client:
         service-url:
-          defaultZone: http://168.130.1.31:31814/eureka/
+          defaultZone: http://192.168.21.32:7002/eureka/
           #防止心跳启动报错
-        register-with-eureka: false
-        fetch-registry: false
+        #register-with-eureka: false
+        #fetch-registry: false
 
 logging:
   config: classpath:logback-spring.xml
