--- a/warning/pom.xml
+++ b/warning/pom.xml
@@ -1,46 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.rzt</groupId>
-    <artifactId>multi-sdtd</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>warning</artifactId>
-  
-  <properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
-	
-	<dependencies>
-	<dependency>
-  		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter-web</artifactId>
-  		<version>1.3.6.RELEASE</version>
-  	</dependency>
-	 <!--公司自己的东西-->
-        <dependency>
-            <groupId>com.rzt.base</groupId>
-            <artifactId>Rzt-base</artifactId>
-            <version>1.1.7-SNAPSHOT</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-  	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-jpa</artifactId>
-	</dependency>
-  	 <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-	</dependencies>
 
+  <artifactId>warning</artifactId>
+    <parent>
+        <groupId>com.rzt</groupId>
+        <artifactId>multi-sdtd</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 	<!--<build>-->
 		<!--<plugins>-->
 			<!--<plugin>-->
