--- a/warningmonitor/src/main/resources/application-xshang.yml
+++ b/warningmonitor/src/main/resources/application-xshang.yml
@@ -60,7 +60,8 @@ eureka:
     prefer-ip-address: true
   client:
         service-url:
-          defaultZone: http://168.130.1.31:31814/eureka/
+          #defaultZone: http://168.130.1.31:31814/eureka/
+          defaultZone: http://localhost:7002/eureka/
 
 
 logging:
