--- a/zull/pom.xml
+++ b/zull/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <start-class>com.example.demo.ZullApplication</start-class>
+        <start-class>com.rzt.ZullApplication</start-class>
         <spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
     </properties>
 
