--- a/warning/src/main/resources/application.yml
+++ b/warning/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     datasource:
       type: com.alibaba.druid.pool.DruidDataSource
       url: jdbc:oracle:thin:@47.94.131.120:1521:orcl
+      #url: jdbc:oracle:thin:@168.130.1.30:1521:orcl
       username: sdtd27
       password: sdtd27
       driver-class-name: oracle.jdbc.driver.OracleDriver
@@ -28,6 +29,18 @@ spring:
       show-sql: true
     application:
       name: warningServer
+    redis:
+        database: 0
+        host: 39.106.206.129
+
+        port: 6379
+        password: Rzt82890758-Rzt82890758
+        timeout: 0
+        pool:
+          max-active: 100
+          max-idle: 8
+          min-idle: 0
+          max-wait: -1
 
 eureka:
   instance:
